--- a/google_palm_codebasics_q_and_a.ipynb
+++ b/google_palm_codebasics_q_and_a.ipynb
@@ -17,13 +17,13 @@
    "source": [
     "#from langchain.llms import GooglePalm\n",
     "\n",
-    "#api_key = 'AIzaSyCaVMWGo7HMKXngnBqToyyNFlQCJVKXmvY' # get this free api key from https://makersuite.google.com/\n",
+    "#api_key = '' # get this free api key from https://makersuite.google.com/\n",
     "\n",
     "#llm = GooglePalm(google_api_key=api_key, temperature=0.1)\n",
     "\n",
     "from langchain_google_genai import GoogleGenerativeAI\n",
     "\n",
-    "api_key = 'AIzaSyCaVMWGo7HMKXngnBqToyyNFlQCJVKXmvY' # get this free api key from https://makersuite.google.com/\n",
+    "api_key = '' # get this free api key from https://makersuite.google.com/\n",
     "\n",
     "llm = GoogleGenerativeAI(model=\"models/text-bison-001\", google_api_key=api_key, temperature=0.1)"
    ]
